--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi==0.115.5
+uvicorn==0.30.6
 gunicorn==22.0.0
+pydantic==2.9.2
+pydantic-settings==2.3.4
 
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
